history of js module examples

--- a/v5/ch01-before-webpack/02-history-of-js-module/es-module/index.html
+++ b/v5/ch01-before-webpack/02-history-of-js-module/es-module/index.html
@@ -1,7 +1,7 @@
+<!-- ch01-before-webpack/02-history-of-js-module/es-module/index.html -->
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Book Webpack Examples: ES Module</title>
     <script src="index.js" type="module"></script>
     <script src="add.js" type="module"></script>
   </head>
